force-app/main/default/objects/Affiliate__c/fields/Affiliate_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Website_URL__c</fullName>
    <label>Affiliate Website URL</label>
    <type>Url</type>
</CustomField>