force-app/main/default/objects/Affiliate__c/fields/AUM__c.field-meta.xml
<CustomField>
    <fullName>AUM__c</fullName>
    <label>AUM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>