force-app/main/default/objects/Affiliate__c/fields/AUMAsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AUMAsOfDate__c</fullName>
    <label>AUM as of date</label>
    <type>Date</type>
</CustomField>