force-app/main/default/objects/Affiliate__c/fields/AUMInPounds__c.field-meta.xml
<CustomField>
    <fullName>AUMInPounds__c</fullName>
    <label>AUM £</label>
    <type>TextArea</type>
</CustomField>