force-app/main/default/objects/Affiliate__c/fields/Footer_Portrait_B_A4__c.field-meta.xml
<CustomField>
    <fullName>Footer_Portrait_B_A4__c</fullName>
    <inlineHelpText>Footer for FFS last page</inlineHelpText>
    <label>Footer Portrait B A4</label>
    <type>Url</type>
</CustomField>