force-app/main/default/objects/Affiliate__c/fields/Full_Profile_URL_DE__c.field-meta.xml
<CustomField>
    <fullName>Full_Profile_URL_DE__c</fullName>
    <label>Full Profile URL DE</label>
    <type>Url</type>
</CustomField>