force-app/main/default/objects/Affiliate__c/fields/Full_Profile_URL_EN__c.field-meta.xml
<CustomField>
    <fullName>Full_Profile_URL_EN__c</fullName>
    <label>Full Profile URL EN</label>
    <type>Url</type>
</CustomField>