force-app/main/default/objects/Affiliate__c/fields/Full_Profile_URL_FR__c.field-meta.xml
<CustomField>
    <fullName>Full_Profile_URL_FR__c</fullName>
    <label>Full Profile URL FR</label>
    <type>Url</type>
</CustomField>