force-app/main/default/objects/Affiliate__c/fields/Full_Profile_URL_IT__c.field-meta.xml
<CustomField>
    <fullName>Full_Profile_URL_IT__c</fullName>
    <label>Full Profile URL IT</label>
    <type>Url</type>
</CustomField>