force-app/main/default/objects/Affiliate__c/fields/Full_Profile_URL_PT__c.field-meta.xml
<CustomField>
    <fullName>Full_Profile_URL_PT__c</fullName>
    <label>Full Profile URL PT</label>
    <type>Url</type>
</CustomField>