force-app/main/default/objects/Affiliate__c/fields/Full_Profile_URL_SP__c.field-meta.xml
<CustomField>
    <fullName>Full_Profile_URL_SP__c</fullName>
    <label>Full Profile URL SP</label>
    <type>Url</type>
</CustomField>