force-app/main/default/objects/Affiliate__c/fields/Header_Portrait_A4__c.field-meta.xml
<CustomField>
    <fullName>Header_Portrait_A4__c</fullName>
    <inlineHelpText>Header for FFS and Commentaries</inlineHelpText>
    <label>Header w/o affiliate logo Portrait A4</label>
    <type>Url</type>
</CustomField>