force-app/main/default/objects/Affiliate__c/fields/Header_with_affiliate_logo_Portrait_A4__c.field-meta.xml
<CustomField>
    <fullName>Header_with_affiliate_logo_Portrait_A4__c</fullName>
    <label>Header with affiliate logo Portrait A4</label>
    <type>Url</type>
</CustomField>