force-app/main/default/objects/Affiliate__c/fields/LastChangedDate__c.field-meta.xml
<CustomField>
    <fullName>LastChangedDate__c</fullName>
    <label>LastChangedDate</label>
    <type>DateTime</type>
</CustomField>