force-app/main/default/objects/Affiliate__c/fields/Legal_Description_DE__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description_DE__c</fullName>
    <label>Legal Description DE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>