force-app/main/default/objects/Affiliate__c/fields/Legal_Description_HK__c.field-meta.xml
<CustomField>
    <fullName>Legal_Description_HK__c</fullName>
    <label>Legal Description HK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>