force-app/main/default/objects/Affiliate__c/fields/Long_Description_EN__c.field-meta.xml
<CustomField>
    <fullName>Long_Description_EN__c</fullName>
    <label>Long Description EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>