force-app/main/default/objects/Affiliate__c/fields/Long_Description_FR__c.field-meta.xml
<CustomField>
    <fullName>Long_Description_FR__c</fullName>
    <label>Long Description FR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>