force-app/main/default/objects/Affiliate__c/fields/Nickname__c.field-meta.xml
<CustomField>
    <fullName>Nickname__c</fullName>
    <formula>IF( Name = &apos;DNCA Investments&apos;, &apos;DNCA&apos; , 
IF( Name = &apos;Dorval Asset Management&apos;, &apos;Dorval&apos; , 
IF( Name = &apos;Gateway Investment Advisers&apos;, &apos;Gateway&apos; , 
IF( Name = &apos;H2O Asset Management&apos;, &apos;H2O&apos; , 
IF( Name = &apos;Investors Mutual Limited&apos;, &apos;Investors Mutual&apos; , 
IF( Name = &apos;Loomis, Sayles &amp; Company&apos;, &apos;Loomis Sayles&apos; , 
IF( Name = &apos;Managed Portfolio Advisors (MPA)&apos;, &apos;MPA&apos; , 
IF( Name = &apos;McDonnell Investment&apos;, &apos;McDonnell&apos; , 
IF( Name = &apos;Natixis Investment Managers Solutions&apos;, &apos;NIMI Solutions&apos; , 
IF( Name = &apos;Naxicap Partners&apos;, &apos;Naxicap&apos; , 
IF( Name = &apos;Ostrum Asset Management&apos;, &apos;Ostrum AM&apos; , 
IF( Name = &apos;Thematics Asset Management&apos;, &apos;Thematics AM&apos; , 
IF( Name = &apos;Vauban Infrastructure Partners&apos;, &apos;Vauban&apos; , 
IF( Name = &apos;Vaughan Nelson Investment Management&apos;, &apos;Vaughan Nelson&apos; , 
IF( Name = &apos;AEW&apos;, &apos;AEW Capital Management&apos; , 
IF( Name = &apos;WCM Investment Management&apos;, &apos;WCM&apos;, Name ))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nickname</label>
    <type>Text</type>
</CustomField>