force-app/main/default/objects/Affiliate__c/fields/Seismic_Scope__c.field-meta.xml
<CustomField>
    <fullName>Seismic_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seismic Scope</label>
    <type>Checkbox</type>
</CustomField>