force-app/main/default/objects/Affiliate__c/fields/Short_Description_DE__c.field-meta.xml
<CustomField>
    <fullName>Short_Description_DE__c</fullName>
    <label>Short Description DE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>